Expose setsize and posinset on native select dropdown options

Bug: 847850
Change-Id: Ia8a198015ab29fe2b4bf6c0bda321c1ebc9c7f8a
Reviewed-on: https://chromium-review.googlesource.com/1079249
Commit-Queue: Aaron Leventhal <aleventhal@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563356}
Former-commit-id: a5fc64b22bca8670c3ad3c9a8ab71dddaf688f78