third_party/blink/renderer/modules/accessibility/ax_menu_list_option.cc
@@ -113,6 +113,21 @@ bool AXMenuListOption::IsOffScreen() const {
   return !IsVisible();
 }
 
+int AXMenuListOption::PosInSet() const {
+  // Value should be 1-based. 0 means not supported.
+  return SetSize() ? element_->index() + 1 : 0;
+}
+
+int AXMenuListOption::SetSize() const {
+  // Return 0 if not supported.
+  if (!element_)
+    return 0;
+  HTMLSelectElement* select = element_->OwnerSelectElement();
+  if (!select)
+    return 0;
+  return select->length();
+}
+
 AccessibilitySelectedState AXMenuListOption::IsSelected() const {
   if (!GetNode() || !CanSetSelectedAttribute())
     return kSelectedStateUndefined;
