third_party/blink/renderer/modules/accessibility/ax_menu_list_option.h
@@ -42,6 +42,9 @@ class AXMenuListOption final : public AXMockObject {
   }
   ~AXMenuListOption() override;
 
+  int PosInSet() const override;
+  int SetSize() const override;
+
  private:
   AXMenuListOption(HTMLOptionElement*, AXObjectCacheImpl&);
   void Trace(blink::Visitor*) override;
